--- a/style/sb-elements.css
+++ b/style/sb-elements.css
@@ -52,9 +52,10 @@ body {
 	margin:0 auto;
 	padding:12px 0;
 	color:#000;
-	background-color:#fff;
+	background-color: #fdf0d5;
 	line-height:1.22;
 	max-width:48em;
+	font-family: Georgia, Times, 'Times New Roman'
 }
 
 address {
@@ -72,7 +73,6 @@ h1, h2, h3, h4, h5, h6 {
 	/*font-family:Verdana, Arial, sans-serif;*/
 	font-family:serif;
 	font-weight:normal;
-	border-bottom:solid 1px #333;
 	margin:0 -36px 1em 0;
 }
 
@@ -81,6 +81,7 @@ h1 {
 	margin-right:-48px;
 	text-align: left;
 	font-size:114%;
+	color: #780000;
 }
 
 h2 {
