--- a/style/sb-elements.css
+++ b/style/sb-elements.css
@@ -1,4 +1,5 @@
 @charset "utf-8";
+@import url('https://fonts.googleapis.com/css2?family=EB+Garamond:wght@400;700&display=swap');
 
 /* 各要素 */
 
@@ -19,7 +20,7 @@ a:visited {
 a:hover {
 	text-decoration:underline;
 	color:#00c;
-	background-color:#cff;
+	background-color: #E1D8C9
 }
 
 a:active {
@@ -52,10 +53,11 @@ body {
 	margin:0 auto;
 	padding:12px 0;
 	color:#000;
-	background-color: #fdf0d5;
+	background-color: #F6F6F2;
 	line-height:1.22;
 	max-width:48em;
-	font-family: Georgia, Times, 'Times New Roman'
+	font-family: "EB Garamond", serif;
+	font-size: 18px;
 }
 
 address {
@@ -71,7 +73,7 @@ address {
 
 h1, h2, h3, h4, h5, h6 {
 	/*font-family:Verdana, Arial, sans-serif;*/
-	font-family:serif;
+	font-family: serif;
 	font-weight:normal;
 	margin:0 -36px 1em 0;
 }
@@ -79,9 +81,11 @@ h1, h2, h3, h4, h5, h6 {
 h1 {
 	margin-left:-48px;
 	margin-right:-48px;
+	margin-bottom: 12px;
 	text-align: left;
-	font-size:114%;
+	font-size:150%;
 	color: #780000;
+	
 }
 
 h2 {
@@ -171,6 +175,10 @@ ul {
 	margin:0;
 	padding:0 0 0 20px;
 	list-style-type:none;
+}
+
+ul li.pub-list {
+	margin-bottom: 18px;
 }
 
 ol {
